--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
-    <p class="lead__subtitle">Настоящая страна не в выпусках<br> новостей, а здесь.</p>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img src="./images/lead-polka.jpg" alt="" class="lead__image">
     <p class="lead__caption">ваша полка — верхняя</p>
   </section>
@@ -50,19 +50,19 @@
   </section>
   <section class="photo-grid">
     <ul class="photo-grid__list">
-      <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__image">
+      <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="Изображение: поезд" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="Изображение: горы" class="photo-grid__image">
       </li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__image"></li>
-      <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" alt="Изображение: утренний туман" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" alt="Изображение: Сочи" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" alt="Изображение: Заледенелый Байкал" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" alt="Изображение: побережье Байкала" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" alt="Изображение: Эльбрус" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" alt="Изображение: пешеходный переход" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" alt="Изображение: горы Камчатки" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="Изображение: гора на Камчатке" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="Изображение: Байкал" class="photo-grid__image"></li>
+      <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="Изображение: парк Ергаки" class="photo-grid__image"></li>
     </ul>
   </section>
   <section class="places">
@@ -162,13 +162,13 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="footer__wrap">
+    <nav class="footer__wrap">
       <a href="https://yandex.ru/maps" class="footer__link" target='_blank'>Карты</a>
       <a href="https://yandex.ru/pogoda" class="footer__link" target='_blank'>Погода</a>
       <a href="https://rasp.yandex.ru" class="footer__link" target='_blank'>Расписание</a>
       <a href="https://calendar.yandex.ru" class="footer__link" target='_blank'>Календарь</a>
       <a href="https://travel.yandex.ru" class="footer__link" target='_blank'>Путешествия</a>
-    </div>
+    </nav>
     <div class="footer__copyright">&copy; 2021. Норин М.</div>
   </footer>
 </body>
