--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
-<body class='page'>
+<body class="page">
   <header class="header">
     <img src="./images/header-logo.svg" alt="Лого: Россия" class="header__logo">
     <div class="header__lang-links">
@@ -39,12 +39,12 @@
           и
           описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-point">Часовых поясов <span class='intro__list-numbers'>11</span>
+          <li class="intro__list-point">Часовых поясов <span class="intro__list-numbers">11</span>
           </li>
-          <li class="intro__list-point">Объектов природного наследия ЮНЕСКО <span class='intro__list-numbers'>12</span></li>
-          <li class="intro__list-point">Объектов культурного наследия ЮНЕСКО <span class='intro__list-numbers'>16</span></li>
-          <li class="intro__list-point">Природных заповедников <span class='intro__list-numbers'>105</span></li>
-          <li class="intro__list-point">Аэропортов <span class='intro__list-numbers'>241</span>
+          <li class="intro__list-point">Объектов природного наследия ЮНЕСКО <span class="intro__list-numbers">12</span></li>
+          <li class="intro__list-point">Объектов культурного наследия ЮНЕСКО <span class="intro__list-numbers">16</span></li>
+          <li class="intro__list-point">Природных заповедников <span class="intro__list-numbers">105</span></li>
+          <li class="intro__list-point">Аэропортов <span class="intro__list-numbers">241</span>
           </li>
         </ul>
       </div>
@@ -83,7 +83,7 @@
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a href='http://park-kosa.ru' class="place__link" target='_blank'>park-kosa.ru</a>
+          <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
         </div>
         <img src="./images/place-kosa.jpg" alt="Фото: Куршская коса" class="place__image">
         <div class="place__wrap-text">
@@ -100,8 +100,8 @@
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a href='https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy' class="place__link"
-            target='_blank'>National Geographic</a>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
+            target="_blank">National Geographic</a>
         </div>
         <img src="./images/place-kolsky.jpg" alt="Фото: Кольский" class="place__image">
         <div class="place__wrap-text">
@@ -119,8 +119,8 @@
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a href='https://www.facebook.com/vera.bashmakova/posts/10156011613718822' class="place__link"
-            target='_blank'>Facebook</a>
+          <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"
+            target="_blank">Facebook</a>
         </div>
         <img src="./images/place-altai.jpg" alt="Фото: Алтай" class="place__image">
         <div class="place__wrap-text">
@@ -138,7 +138,7 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a href='https://vk.com/baikalmile' class="place__link" target='_blank'>https://vk.com/baikalmile</a>
+          <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <img src="./images/place-winter-baikal.jpg" alt="Фото: Зимний Байкал" class="place__image">
         <div class="place__wrap-text">
@@ -156,7 +156,7 @@
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
-          <a href='http://vodlozero.ru' class="place__link" target='_blank'>http://vodlozero.ru/</a>
+          <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
         </div>
         <img src="./images/place-karelia.jpg" alt="Фото: Карелия" class="place__image">
         <div class="place__wrap-text">
@@ -171,7 +171,7 @@
     </section>
     <section class="cover">
       <div class="cover__background">
-        <a href='https://stampsy.com/na-elektrichkakh-do-baikala' class="cover__overlay" target='_blank'>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
           <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
           <p class="cover__subtitle">По&nbsp;мотивам учебной&nbsp;темы о&nbsp;Транссибе &mdash; путешествие от столицы до&nbsp;Байкала на&nbsp;электричках.</p>
         </a>
@@ -180,11 +180,11 @@
   </main>
   <footer class="footer">
     <nav class="footer__wrap">
-      <a href="https://yandex.ru/maps" class="footer__link" target='_blank'>Карты</a>
-      <a href="https://yandex.ru/pogoda" class="footer__link" target='_blank'>Погода</a>
-      <a href="https://rasp.yandex.ru" class="footer__link" target='_blank'>Расписание</a>
-      <a href="https://calendar.yandex.ru" class="footer__link" target='_blank'>Календарь</a>
-      <a href="https://travel.yandex.ru" class="footer__link" target='_blank'>Путешествия</a>
+      <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
+      <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
     </nav>
     <p class="footer__copyright">&copy; 2021. Норин М.</p>
   </footer>
